# borealis

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp  xmake.lua
res/: island.tmx
src/: State.hpp  StateManager.hpp  TileMap.cpp  TileMap.hpp  TileMapManager.cpp  TileMapManager.hpp  game_data.hpp  game_state.cpp  game_state.hpp  main.cpp  pause_state.hpp  raylib.hpp  state.hpp  state.mpp  state_manager.hpp  state_manager.mpp  tile_map.cpp  tile_map.hpp  tile_map.mpp  tile_map_manager.cpp  tile_map_manager.hpp  tile_map_manager.mpp  tmx.hpp
